--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,11 @@
     <title>aetherwave.rm</title>
 </head>
   <body>
-    <div id="root"></div>
+      <div id="root">
+          <div id="auth-modal" class="hidden">
+              {% include "account/login.html" %}
+          </div>
+      </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
